# airmise

./: .airmise_standalone.txt  .gitignore  changelog.md  pyproject.toml  readme.md
aircontrol/: __init__.py  __main__.py  client.py  const.py  executor.py  frontend.html  frontend.py  serdes.py  server.py  server2.py  server_(sanic).py  util.py  webapp.py
aircontrol/web/: local_server.py  web_server.py
airmise/: __init__.py  __main__.py  client.py  codec.py  const.py  export.py  master.py  remote_control.py  serdes.py  server.py  server3.py  slave.py  socket_wrapper.py  util.py
airmise/fast_reverse_proxy/: __init__.py
airmise/fast_reverse_proxy/airwise/: __init__.py  private_handler.py  public_transceiver.py
airmise/fast_reverse_proxy/http/: __init__.py  private_server.py  public_server.py
docs/: advantages-compare-to-traditional-apps.zh.md  aircontrol-distribution-size.zh.md  changelog.md  server-webapp-client-structure.zh.md  webapp-work-model.zh.md
test/: client_test.py  export_api.py  fast_requests_to_slow_server.py  frp_test.py  interact_with_remote_object.py  iterator.py  multiple_clients.py  profiling_aiohttp_startup.py  remote_call.py  server_catch_error.py  server_client_test.py  timeout_waiting_for_pong.py  transfer_file_in_binary.py  two_way_communication.py  webapp_test.py
