[project]
name = "airmise"
version = "2.0.0a0"
description = "The native experience of calling remote functions, like local ones."
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
dynamic = ["dependencies"]
readme = "readme.md"
requires-python = ">=3.8"
packages = [{ include = "airmise" }]

[project.urls]
homepage = "https://github.com/likianta/airmise"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "^1.1.0"
lk-logger = "^6.0.6"
lk-utils = "^3.3.0"

[tool.poetry.group.dev.dependencies]
argsense = { version = "^1.1.1a0", source = "likianta" }
ipython = { version = "^9.6.0", python = "^3.12" }
lk-logger = { version = "^6.1.0a1", source = "likianta" }
lk-utils = { version = "^3.4.0a0", source = "likianta" }

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "tsinghua"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2131/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
