[project]
name = "airmise"
version = "2.0.1"
description = "The native experience of calling remote functions, like local ones."
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
dynamic = ["dependencies"]
readme = "readme.md"
requires-python = ">=3.8"
packages = [{ include = "airmise" }]

[project.urls]
homepage = "https://github.com/likianta/airmise"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "^1.1.1"
lk-logger = "^6.0.7"
lk-utils = "^3.5.2"

[tool.poetry.group.dev.dependencies]
argsense = { version = "^1.1.1", source = "likianta" }
ipython = { version = "^9.12.0", python = "^3.12" }
lk-logger = { version = ">=6.0.7,<6.1.0", source = "likianta" }
lk-utils = { version = "^3.5.2", source = "likianta" }

# --- for build/build_standalone
streamlit = { version = "^1.56.0", python = "^3.12" }
streamlit-canary = { version = "^0.2.1", python = "^3.12", source = "likianta" }
tree-shaking = { version = "^0.2.5a2", python = "^3.12", source = "likianta" }

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2191/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
