[project]
name = "airmise"
version = "3.0.0a4"
description = "The native experience of calling remote functions, like local ones."
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
dynamic = ["dependencies"]
readme = "readme.md"
requires-python = ">=3.9"
packages = [{ include = "airmise" }]

[project.urls]
homepage = "https://github.com/likianta/airmise"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = { version = "^3.13.3", optional = true }
argsense = "^1.1.1"
lk-logger = "^6.0.7"
lk-utils = "^3.5.2"

[project.optional-dependencies]
frp = ["aiohttp>=3.13.3"]

[tool.poetry.group.dev.dependencies]
aiohttp = "^3.13.3"
argsense = { version = "^1.1.1", source = "likianta" }
ipython = { version = "^9.12.0", python = "^3.12" }
lk-utils = { version = "^3.6.0a7", source = "likianta" }

# --- for build/build_standalone
nuitka = "^4.0.8"
streamlit = { version = "^1.56.0", python = "^3.12" }
streamlit-canary = { version = "^0.2.2b0", python = "^3.12", source = "likianta" }
tree-shaking = { version = "^0.2.5a4", python = "^3.12", source = "likianta" }

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2191/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
